--- a/frontend/src/components/UserBox.css
+++ b/frontend/src/components/UserBox.css
@@ -27,4 +27,9 @@
     .UserBox {
         flex-direction: column;
     }
+
+    .UserBox p {
+        margin-bottom: 15px;
+        margin-top: 10px;
+    }
 }
